Changing width on bottom boxes

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -305,6 +305,7 @@
 	height: 100px;
 	margin: 10px;
 	padding: 30px 10px 20px;
+	width: 160px;
         /*background: url(../../images/teach-home-board.png) no-repeat;
         -moz-border-radius: 25px 25px 25px 25px;
         -moz-box-shadow: 0 0 5px #ae9fca;
