Adding rules for left-main-content p.

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -359,6 +359,11 @@
 	float: left;
 }
 
+.teach #left-main-content {
+	color: #666666;
+	font-size: 1em;
+}
+
 .teach .label {
 	cursor: pointer;
 }
