--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -353,8 +353,9 @@
 }
 
 .teach #left-main-content {
-	width: 590px;
+	width: 570px;
 	padding-left: 10px;
+	padding-right: 20px;
 	clear: both;
 	float: left;
 }
@@ -364,8 +365,61 @@
 	font-size: 1em;
 }
 
+.teach .post-header {
+	width: 100%;
+}
+
+.teach .post-header-title {
+	float: left;
+}
+
+.teach .pdf_download {
+	float: right;
+	margin-top: 20px;
+	padding-right: 10px;
+}
+
+.teach img.pdf { 
+	vertical-align: middle; 
+	padding-right: 10px;
+}
+
 .teach .label {
 	cursor: pointer;
+}
+
+.teach .program-info {
+    clear: both;
+    margin-bottom: 5em;
+    margin-top: 1.2em;
+}
+
+.teach .program-info ul {
+    border-bottom: 0 solid #CCCCCC;
+    display: block;
+    padding: 0;
+}
+
+.teach .program-info ul li {
+    display: inline;
+    float: left;
+}
+
+.teach .program-info li.rating {
+    background: url("http://seekingmichigan.org/images/icon-comments.png") no-repeat scroll 0 50% transparent;
+    padding-left: 5px;
+}
+
+.teach .program-info li.registration {
+    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 50% transparent;
+    float: right;
+    margin-left: 10px;
+    padding-right: 10px;
+}
+
+.teach .program-info a {
+    display: block;
+    padding: 2px 2px 2px 18px;
 }
 
 .teach #sidebar {
