--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -404,12 +404,46 @@
     float: left;
 }
 
-.teach .program-info li.rating {
+.teach .program-info li.registration {
     background: url("http://seekingmichigan.org/images/icon-comments.png") no-repeat scroll 0 50% transparent;
     padding-left: 5px;
 }
 
-.teach .program-info li.registration {
+.teach .program-info li.share-link {
+    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 50% transparent;
+    float: right;
+    margin-left: 10px;
+    padding-right: 10px;
+}
+
+.teach .program-info a {
+    display: block;
+    padding: 2px 2px 2px 18px;
+}
+
+.teach .post-meta {
+    clear: both;
+    margin-bottom: 5em;
+    margin-top: 1.2em;
+}
+
+.teach .post-meta ul {
+    border-bottom: 0 solid #CCCCCC;
+    display: block;
+    padding: 0;
+}
+
+.teach .post-meta ul li {
+    display: inline;
+    float: left;
+}
+
+.teach .program-info li.comment-count {
+    background: url("http://seekingmichigan.org/images/icon-comments.png") no-repeat scroll 0 50% transparent;
+    padding-left: 5px;
+}
+
+.teach .program-info li.rating {
     background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 50% transparent;
     float: right;
     margin-left: 10px;
