--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -438,12 +438,12 @@
     float: left;
 }
 
-.teach .program-info li.comment-count {
+.teach .post-meta li.comment-count {
     background: url("http://seekingmichigan.org/images/icon-comments.png") no-repeat scroll 0 50% transparent;
     padding-left: 5px;
 }
 
-.teach .program-info li.rating {
+.teach .post-meta li.rating {
     background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 50% transparent;
     float: right;
     margin-left: 10px;
