Added a different image for ratings (placeholder

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -444,7 +444,7 @@
 }
 
 .teach .post-meta li.rating {
-    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 50% transparent;
+    background: url("http://seekingmichigan.org/images/icon-rating.png") no-repeat scroll 0 50% transparent;
     float: right;
     margin-left: 10px;
     padding-right: 10px;
