--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -387,6 +387,10 @@
 	cursor: pointer;
 }
 
+.teach .hidden {
+	display: none;
+}
+
 .teach .program-info {
     clear: both;
     margin-bottom: 5em;
@@ -410,7 +414,7 @@
 }
 
 .teach .program-info li.registration {
-    background: url("http://seekingmichigan.org/images/icon-comments.png") no-repeat scroll 0 50% transparent;
+    background: url("http://seekingmichigan.org/images/button-registration.png") no-repeat scroll 0 50% transparent;
     float: right;
     margin-left: 10px;
     padding-right: 10px;
