White color for visited links

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -330,7 +330,7 @@
 	font-size: 2em;
 	text-align: center;
 	z-index: 2;
-	color: #FCF7E7;
+	color: #FFFFFF;
 	font-family: Georgia,Times,sans-serif;;
 	
 }
@@ -340,7 +340,7 @@
 }
 
 .teach #boxes a:visited {
-	color: #EEEEEE;
+	color: #FFFFFF;
 }
 
 .teach #boxes-btm {
