Making negative top margin

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -243,25 +243,25 @@
 .teach #list-middle-content ul li img,
 .teach #list-right-content ul li img{
 	float: left;
-	margin: 0 15px 0 0;
+	margin: -10px 15px 0 0;
 }
 
 .teach #list-left-content .subheader {
-	height: 50px;
+	height: 40px;
 	font-size: 1.45em;
 	color: #df5635;
 	display: block;
 }
 
 .teach #list-middle-content .subheader {
-	height: 50px;
+	height: 40px;
 	font-size: 1.45em;
 	color: #ca9102;
 	display: block;
 }
 
 .teach #list-right-content .subheader {
-	height: 50px;
+	height: 40px;
 	font-size: 1.45em;
 	color: #3c6e94;
 	display: block;
