--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -75,6 +75,19 @@
 	top: 33px;
 }
 
+.teach #lead-in a {
+	display:block;
+	height:20px;
+	width:80px;
+	position:absolute;
+	left:20px;
+	top:20px;
+}
+
+.teach #lead-in a span {
+	display:none;
+}
+
 .teach #main-content {
 	width: 899px;
 	margin-top: -259px;
