--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -422,8 +422,10 @@
 }
 
 .teach .program-info li.share-link {
-    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 50% transparent;
+    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 10% transparent;
     padding-left: 5px;
+    margin-bottom: -20px;
+    margin-top: 15px;
 }
 
 .teach .program-info li.registration {
@@ -431,11 +433,14 @@
     float: right;
     margin-left: 10px;
     padding-right: 10px;
+    height:55px;
+    width:145px;
 }
 
 .teach .program-info a {
     display: block;
     padding: 2px 2px 2px 18px;
+    height:55px;
 }
 
 .teach .post-meta {
