--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -362,7 +362,8 @@
 }
 
 .teach #left-main-content {
-	width: 600px;
+	width: 580px;
+	padding: 20px;
 	clear: both;
 	float: left;
 }
@@ -378,6 +379,10 @@
 
 .teach #left-main-content ul {
 	margin-top: 0.5em;
+}
+
+.teach .post {
+	padding: none;
 }
 
 .teach .post-header {
