Changed margin and padding for register and apply buttons

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -481,8 +481,7 @@
 .teach .program-info li.registration {
     background: url("http://seekingmichigan.org/images/button-register.jpg") no-repeat scroll 0 50% transparent;
     float: right;
-    margin-left: 10px;
-    padding-right: 10px;
+    margin-top: 10px;
     height:44px;
     width:116px;
 }
@@ -490,8 +489,7 @@
 .teach .program-info li.application {
     background: url("http://seekingmichigan.org/images/button-apply.jpg") no-repeat scroll 0 50% transparent;
     float: right;
-    margin-left: 10px;
-    padding-right: 10px;
+    margin-top: 10px;
     height:44px;
     width:116px;
 }
