--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -466,6 +466,38 @@
 	visibility:hidden;
 }
 
+.teach .pre-meta {
+    clear: both;
+    border-bottom: 1px dotted #CCCCCC;
+    margin-bottom: 5em;
+    margin-top: 1.2em;
+}
+
+.teach .pre-meta ul {
+    display: block;
+    padding: 0;
+}
+
+.teach .pre-meta ul li {
+    display: inline;
+    float: left;
+}
+
+.teach .pre-meta li.grade-level {
+    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 10% transparent;
+    padding-left: 5px;
+    margin-bottom: -20px;
+    margin-top: 15px;
+}
+
+.teach .pre-metao li.pdf {
+    background: url("http://seekingmichigan.org/images/button-register.jpg") no-repeat scroll 0 50% transparent;
+    float: right;
+    margin-top: 10px;
+    height:44px;
+    width:116px;
+}
+
 .teach .program-info {
     clear: both;
     margin-bottom: 5em;
