Changing header css rules.

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -389,13 +389,13 @@
 	padding: 10px 0;
 }
 
-.teach .post p {
+.teach #left-main-content .post p {
 	font-size: 1.2em;
 	line-height: 2em;
 	font-family: Georgia,"Times New Roman",Times,serif;
 }
 
-.teach .post h2 a{
+.teach #left-main-content .post h2 a{
 	font-size: 1.7em;
 	font-weight: 500;
 	line-height: 1.3em;
@@ -403,11 +403,11 @@
 	color: #503E70;
 }
 
-.teach .post h2 a:hover {
+.teach #left-main-content .post h2 a:hover {
 	text-decoration: underline;
 }
 
-.teach .post h3 {
+.teach #left-main-content .post h3 {
 	margin-top: 1.5em;
 	line-height: 2.5em;
 	font-size: 1.7em;
@@ -416,7 +416,7 @@
 	display: inline;
 }
 
-.teach .post h4 {
+.teach #left-main-content .post h4 {
 	margin-top: 1.5em;
 	line-height: 2.5em;
 	font-size: 1.7em;
@@ -425,13 +425,12 @@
 	display: inline;
 }
 
-.teach .post h5 {
+.teach #left-main-content .post h5 {
 	margin-top: 1.5em;
 	line-height: 2.1em;
 	font-size: 1.4em;
 	font-weight: lighter;
 	color: ##503E70;
-	display: inline;
 }
 
 .teach. .post blockquote h3 {
