--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -428,6 +428,16 @@
 	color: #503E70;
 }
 
+.teach #left-main-content {
+	list-style-image: url(/images/teach-arrow.png);
+}
+
+.teach #letf-main-content ul li {
+	font-size: 1.2em;
+	line-height: 2em;
+	font-family: Georgia,"Times New Roman",Times,serif;
+}
+
 .teach. .post blockquote h3 {
 	margin-top: 0;
 }
