--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -428,11 +428,8 @@
 	color: #503E70;
 }
 
-.teach #left-main-content {
+.teach .post ul li, .post li ul li, .post li li ul li  {
 	list-style-image: url(/images/teach-arrow.png);
-}
-
-.teach #letf-main-content ul li {
 	font-size: 1.2em;
 	line-height: 2em;
 	font-family: Georgia,"Times New Roman",Times,serif;
