--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -433,6 +433,7 @@
 	font-size: 1.2em;
 	line-height: 2em;
 	font-family: Georgia,"Times New Roman",Times,serif;
+	padding-bottom: 10px;
 }
 
 .teach. .post blockquote h3 {
