Darker gray color for post p

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -393,6 +393,7 @@
 	font-size: 1.2em;
 	line-height: 2em;
 	font-family: Georgia,"Times New Roman",Times,serif;
+	color: #333333;
 }
 
 .teach #left-main-content .post h2 a{
