--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -491,7 +491,7 @@
 }
 
 .teach .pre-meta li.grade-level {
-    background: url("http://seekingmichigan.org/images/icon-share.png") no-repeat scroll 0 10% transparent;
+    background: url("http://seekingmichigan.org/images/teach-icon-grade-level.png") no-repeat scroll 0 10% transparent;
     padding-left: 5px;
     margin-bottom: -20px;
     margin-top: 15px;
