--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -495,6 +495,8 @@
     padding-left: 30px;
     margin-bottom: -20px;
     margin-top: 10px;
+    color: #503E70;
+    font-weight: 700;
 }
 
 .teach .pre-metao li.pdf {
