Fixed misspelling in css rules

--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -499,7 +499,7 @@
     font-weight: 700;
 }
 
-.teach .pre-metao li.pdf {
+.teach .pre-meta li.pdf {
     background: url("http://seekingmichigan.org/images/icon-pdf.jpg") no-repeat scroll 0 50% transparent;
     float: right;
     margin-top: 10px;
