--- a/theme/stylesheets/screen/teach-landing.css
+++ b/theme/stylesheets/screen/teach-landing.css
@@ -500,7 +500,7 @@
 }
 
 .teach .pre-meta li.pdf {
-    background: url("http://seekingmichigan.org/images/icon-pdf.png") no-repeat scroll 0 50% transparent;
+    background: url("http://seekingmichigan.org/images/icon-pdf.jpg") no-repeat scroll 0 50% transparent;
     float: right;
     margin-top: 10px;
     height:44px;
